[package]
name = "type_exporter"
version = "0.2.0"
edition = "2021"
authors = ["Golden_Water"]
license = "MIT"
repository = "https://github.com/BillGoldenWater/TypeExporter.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
heck = { version = "0.4.1", features = ["unicode", "unicode-segmentation"] }
itertools = "0.10.5"
log = "0.4.17"
swc = { version = "=0.251.0", features = [] }
swc_common = "=0.29.35"
swc_core = { version = "=0.65.0", features = ["ecma_ast"] }
syn = { version = "2.0.14", features = ["full", "extra-traits"] }
thiserror = "1.0.40"
type_exporter_macro = { version = "0.1.0", path = "type_exporter_macro" }
walkdir = "2.3.3"
argh = "0.1.10"

[workspace]
members = ["type_exporter_macro"]
