[package]
name = "type_exporter"
version = "0.2.0"
edition = "2021"
authors = ["Golden_Water"]
license = "MIT"
repository = "https://github.com/BillGoldenWater/type_exporter.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
type_exporter_macro = { version = "0.1.0", path = "type_exporter_macro" }

env_logger = "0.10.0"
log = "0.4.17"

serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
toml = "0.7.6"

syn = { version = "2.0.14", features = ["full", "extra-traits"] }

swc = { version = "=0.251.0", features = [] }
swc_common = "=0.29.35"
swc_core = { version = "=0.65.0", features = ["ecma_ast"] }

argh = "0.1.10"
heck = { version = "0.4.1", features = ["unicode", "unicode-segmentation"] }
itertools = "0.11.0"
thiserror = "1.0.40"
walkdir = "2.3.3"

[workspace]
members = ["type_exporter_macro", "src_old"]
